Fix home buttons on mobile

--- a/docs/src/styles/global/global.css
+++ b/docs/src/styles/global/global.css
@@ -724,3 +724,21 @@ div[role='group'][tabindex] {
     opacity: 0;
   }
 }
+
+.home__buttons a {
+  display: block;
+}
+
+.home__buttons a:nth-child(2) {
+  margin-right: 8px;
+  margin-left: 8px;
+}
+
+@media (max-width: 500px) {
+  .home__buttons {
+    flex-direction: column;
+  }
+  .home__buttons a:nth-child(2) {
+    margin: 8px 0;
+  }
+}
